--- a/www/index.html
+++ b/www/index.html
@@ -76,6 +76,8 @@
 	
 	
 		<!-- Scripts -->
+		 <script src="assets/js/highlight.js"></script>
+    <script src="assets/js/app.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
