--- a/www/index.html
+++ b/www/index.html
@@ -40,10 +40,92 @@
 	<div id="wrapper">
 		<div id="page-content-wrapper" class="">
 
+			<nav class="navbar navbar-expand-lg navbar-light headerNavbar"
+				ng-controller="TemplateCtrl">
+				<a class="navbarLeftButton" href="javascript:void(0)"
+					ng-click="toggleSidebar()" id="backButton">
+					<i class="fa fa-bars"></i>
+				</a>
+				<a href="#/home" ng-click="toHome()" class="navbar-brand" href="#">Pichincha</a>
+				<a class="" href="javascript:void(0)" ng-click="toggleSidebar()"
+					id="backButton">
+					<i class="fa fa-filter"></i>
+				</a>
+			</nav>
 
 
 			<div class="" ng-view></div>
+
 		</div>
+
+		<!-- Sidebar -->
+		<nav class="navbar navbar-inverse navbar-fixed-top"
+			id="sidebar-wrapper" role="navigation" ng-controller="TemplateCtrl">
+			<div class="sidebar">
+
+				<div class="profileSection">
+					<img src="img/profile.png" />
+					<br />
+					<a href="javascript:void(0)">Iniciar sesión</a>
+				</div>
+				<div class="hrDiv">
+					<hr />
+				</div>
+				<div class="list-group sidebarLinks">
+					<a href="javascript:void(0)" class="sidebarLink">
+						Búsqueda
+						<i class="fa fa-search"></i>
+					</a>
+					<a href="javascript:void(0)" class="sidebarLink">
+						Noticias
+						<i class="fa fa-newspaper-o"></i>
+					</a>
+					<a href="javascript:void(0)" class="sidebarLink">
+						Eventos
+						<i class="fa fa-calendar"></i>
+					</a>
+				</div>
+				<div class="hrDiv">
+					<hr />
+				</div>
+				<div class="list-group sidebarLinks">
+					<a href="javascript:void(0)" class="sidebarLink">
+						Cambiar provincia
+						<i class="fa fa-globe"></i>
+					</a>
+					<a href="javascript:void(0)" class="sidebarLink">
+						Agregar zona
+						<i class="fa fa-plus"></i>
+					</a>
+					<a href="javascript:void(0)" class="sidebarLink">
+						Ranking
+						<i class="fa fa-flag"></i>
+					</a>
+					<a href="javascript:void(0)" class="sidebarLink">
+						Tu historial
+						<i class="fa fa-history"></i>
+					</a>
+					<a href="javascript:void(0)" class="sidebarLink">
+						Favoritos
+						<i class="fa fa-star"></i>
+					</a>
+				</div>
+				<div class="hrDiv">
+					<hr />
+				</div>
+				<div class="list-group sidebarLinks">
+					<a href="javascript:void(0)" class="sidebarLink">
+						Tiendas
+						<i class="fa fa-shopping-basket"></i>
+					</a>
+					<a href="javascript:void(0)" class="sidebarLink">
+						Ofertas
+						<i class="fa fa-percent"></i>
+					</a>
+				</div>
+			</div>
+		</nav>
+
 	</div>
 
 	<script type="text/javascript" src="js/lib/jquery-3.1.1.js"></script>
